--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -86,3 +86,14 @@ jobs:
 
     - name: Run tests
       run: bin/rails test
+
+    - name: Create HTML test report
+      run: |
+        yarn add xunit-viewer
+        node_modules/xunit-viewer/bin/xunit-viewer -r test/reports -o test/reports/index.html
+
+    - name: Archive test report
+      uses: actions/upload-artifact@v2
+      with:
+        name: test-report
+        path: test/reports/
